@@ -1,11 +1,17 @@
 package com.dw.artgallery.service;
 
+import com.dw.artgallery.DTO.TicketAddDTO;
 import com.dw.artgallery.DTO.TicketDTO;
+import com.dw.artgallery.model.ArtistGallery;
 import com.dw.artgallery.model.Ticket;
+import com.dw.artgallery.model.User;
+import com.dw.artgallery.repository.ArtistGalleryRepository;
 import com.dw.artgallery.repository.TicketRepository;
 import com.dw.artgallery.exception.ResourceNotFoundException;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
+import org.springframework.web.server.ResponseStatusException;
 
 import java.time.LocalDate;
 import java.util.List;
@@ -15,41 +21,54 @@ import java.util.stream.Collectors;
 public class TicketService {
     @Autowired
     TicketRepository ticketRepository;
+    @Autowired
+    ArtistGalleryRepository artistGalleryRepository;
 
 
-    //  모든 티켓 조회
-    public List<TicketDTO> getAllTickets() {
-        return ticketRepository.findAllByIsDeletedFalse().stream()
-                .map(this::convertToDTO)
-                .collect(Collectors.toList());
-    }
-
-    //  ID로 특정 티켓 조회
+    //  ID로 티켓 조회
     public TicketDTO getTicketById(Long id) {
         Ticket ticket = ticketRepository.findByIdAndIsDeletedFalse(id)
-                .orElseThrow(() -> new ResourceNotFoundException("해당 ID의 티켓을 찾을 수 없습니다: " + id));
-        return convertToDTO(ticket);
+                .orElseThrow(() -> new ResourceNotFoundException("티켓을 찾을 수 없습니다: " + id));
+        return ticket.toDto();
     }
 
-    //  구매 날짜별 티켓 조회
+    //  날짜로 조회
     public List<TicketDTO> getTicketsByPurchaseDate(LocalDate date) {
         return ticketRepository.findByPurchaseDateAndIsDeletedFalse(date).stream()
-                .map(this::convertToDTO)
-                .collect(Collectors.toList());
+                .map(Ticket::toDto)
+                .toList();
     }
 
+    //  유저 ID로 조회
     public List<TicketDTO> getTicketsByUserId(String userId) {
-        List<Ticket> tickets = ticketRepository.findAllByUser_UserIdAndIsDeletedFalse(userId);
-        return tickets.stream()
-                .map(this::convertToDTO)
+        return ticketRepository.findAllByUser_UserIdAndIsDeletedFalse(userId).stream()
+                .map(Ticket::toDto)
                 .toList();
     }
 
 
-    public void softDeleteTicket(Long ticketId) {
-        Ticket ticket = ticketRepository.findById(ticketId)
+    public void softDeleteTicket(Long ticketId, User user) {
+        Ticket ticket = ticketRepository.findByIdAndIsDeletedFalse(ticketId)
                 .orElseThrow(() -> new ResourceNotFoundException("해당 ID의 티켓을 찾을 수 없습니다: " + ticketId));
+        if (!ticket.getUser().getUserId().equals(user.getUserId())) {
+            throw new ResponseStatusException(HttpStatus.FORBIDDEN, "본인의 티켓만 삭제할 수 있습니다.");
+        }
+        ticket.setIsDeleted(true);
+        ticketRepository.save(ticket);
+    }
+
+    public void addTicket(Long artistGalleryId, TicketAddDTO dto, User user) {
+        ArtistGallery gallery = artistGalleryRepository.findById(artistGalleryId)
+                .orElseThrow(() -> new ResourceNotFoundException("해당 전시를 찾을 수 없습니다: " + artistGalleryId));
+
+        Ticket ticket = new Ticket();
+        ticket.setUser(user);
+        ticket.setArtistGallery(gallery);
+        ticket.setCount(dto.getCount());
+        ticket.setSelectDate(dto.getSelectDate());
+        ticket.setPurchaseDate(LocalDate.now());
         ticket.setIsDeleted(false);
+
         ticketRepository.save(ticket);
     }
 
@@ -60,16 +79,7 @@ public class TicketService {
 
 
 
-    //  `Ticket` 엔터티를 `TicketDTO`로 변환
-    private TicketDTO convertToDTO(Ticket ticket) {
-        return new TicketDTO(
-                ticket.getId(),
-                Integer.parseInt(ticket.getCount()), // String → int 변환
-                ticket.getSelectDate(),
-                ticket.getArtistGallery() != null ? ticket.getArtistGallery().getTitle() : "Unknown",
-                ticket.getPurchaseDate()
-        );
-    }
+
 
 
 }
